# review-crew

./: .flake8  .gitignore  Makefile  README.md  manifest.schema.json  pyproject.toml  pytest.ini  requirements.txt  setup_personas.py  test_conversation.py  test_example.py  test_lm_studio.py  test_review.py
examples/personas/: content_reviewer.yaml  ux_reviewer.yaml
examples/personas/analyzers/: application_coherence_analyzer.yaml  competitive_analysis_specialist.yaml  cross_document_themes_analyzer.yaml  quality_metrics_analyzer.yaml  sentiment_analysis.yaml
examples/personas/contextualizers/: business_contextualizer.yaml  contextualizer.yaml
examples/personas/reviewers/: security_reviewer.yaml
examples/personas/reviewers/academic/: application_reviewer.yaml
examples/personas/reviewers/business/: proposal_reviewer.yaml
examples/personas/reviewers/content/: content_reviewer.yaml  enhanced_content_reviewer.yaml  multi_document_reviewer.yaml
examples/personas/reviewers/technical/: enhanced_technical_reviewer.yaml  technical_reviewer.yaml
scripts/: validate_manifests.py
src/: __init__.py
src/agents/: __init__.py  analysis_agent.py  base_agent.py  context_agent.py  conversation_manager.py  data_models.py  document_processor_node.py  result_converter.py  review_agent.py  review_graph_builder.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  persona_loader.py
src/conversation/: __init__.py  document_processor.py  graph_builder.py  manager.py
src/export/: __init__.py  formatters.py
src/logging/: __init__.py  manager.py
src/tools/: __init__.py  academic_tools.py  comparison_tools.py  context_parser.py  logging_utils.py  structure_analysis.py  text_metrics.py
src/validation/: __init__.py  document_validator.py
test_inputs/: api_documentation.md  api_with_context.md  product_page.html  technical_context.md  user_registration.py
tests/: README.md  __init__.py  conftest.py  test_integration.py
tests/agents/: test_base_agent.py  test_context_agent.py  test_contextualizer_manifest.py  test_conversation_manager.py  test_conversation_manager_core.py  test_document_processor_node.py  test_format_results.py  test_graph_integration.py  test_model_fallback.py  test_result_converter.py  test_review_agent.py  test_review_graph_builder.py
tests/cli/: test_cli.py  test_enhanced_cli.py
tests/config/: test_contextualizer_persona_loading.py  test_persona_loader.py  test_persona_loader_subfolders.py
tests/conversation/: __init__.py  test_document_processor.py  test_graph_builder.py  test_graph_integration.py  test_manager.py
tests/export/: __init__.py  test_formatters.py
tests/multi_document/: __init__.py  test_cli_directory_handling.py  test_document_compilation.py  test_manifest_parsing.py
tests/personas/: test_domain_specific_reviewer_personas.py  test_multi_document_analyzer_personas.py  test_new_analyzer_personas.py  test_new_reviewer_personas.py
tests/phase3/: __init__.py  test_advanced_manifest.py
tests/tools/: __init__.py  test_academic_tools.py  test_comparison_tools.py  test_context_parser.py  test_structure_analysis.py  test_text_metrics.py
tests/validation/: __init__.py  test_document_validator.py
